@@ -1053,7 +1053,7 @@ JsVar *jsvNewNativeFunction(void (*ptr)(void), unsigned short argTypes) {
 }
 
 JsVar *jsvNewNativeString(char *ptr, size_t len) {
-  if (len>65535) len=65535; // crop string to 65535 characters because that's all be can store in nativeStr.len
+  if (len>JSV_NATIVE_STR_MAX_LENGTH) len=JSV_NATIVE_STR_MAX_LENGTH; // crop string to what we can store in nativeStr.len
   JsVar *str = jsvNewWithFlags(JSV_NATIVE_STRING);
   if (!str) return 0;
   str->varData.nativeStr.ptr = ptr;
